# desloppify-kmp

./: Makefile  README.md  pyproject.toml
desloppify/: README.md  file_discovery.py  utils.py
desloppify/app/cli_support/: parser.py  parser_groups.py  parser_groups_admin.py
desloppify/app/commands/: detect.py  dev_cmd.py  dev_scaffold_templates.py  langs.py
desloppify/app/commands/helpers/: lang.py
desloppify/app/output/: visualize.py
desloppify/app/output/scorecard_parts/: dimension_policy.py
desloppify/core/: discovery_api.py  paths_api.py  registry.py  signal_patterns.py  source_discovery.py
desloppify/engine/_scoring/policy/: core.py
desloppify/engine/detectors/: base.py
desloppify/engine/detectors/coverage/: mapping.py
desloppify/engine/detectors/test_coverage/: heuristics.py
desloppify/engine/policy/: zones_data.py
desloppify/intelligence/narrative/: action_engine.py
desloppify/languages/_framework/review_data/: dimensions.json
desloppify/languages/kotlin/: __init__.py  commands.py  extractors.py  move.py  phases.py  review.py  test_coverage.py
desloppify/languages/kotlin/detectors/: __init__.py  android_deprecated.py  android_manifest.py  build_files.py  compose_smells.py  coroutines.py  deps.py  detekt_adapter.py  expect_actual.py  kmp_utils.py  kn_memory.py  platform_leakage.py  smells.py  source_set_violations.py
desloppify/languages/kotlin/fixers/: __init__.py  freeze.py  global_scope.py  ktlint_fixer.py
desloppify/languages/kotlin/review_data/: dimensions.override.json
desloppify/languages/kotlin/tests/: __init__.py  test_android_deprecated.py  test_android_manifest.py  test_build_files.py  test_compose_smells.py  test_expect_actual.py  test_kmp_utils.py  test_kotlin_init.py  test_platform_leakage.py
desloppify/languages/swift/: __init__.py  test_coverage.py
desloppify/languages/swift/detectors/: __init__.py  info_plist.py  ios_deps.py  swift_code.py
desloppify/languages/swift/review_data/: dimensions.override.json
desloppify/languages/swift/tests/: __init__.py  test_info_plist.py  test_ios_deps.py  test_swift_code.py
desloppify/tests/ci/: test_ci_contracts.py
desloppify/tests/commands/: test_cli.py  test_cmd_dev.py  test_cmd_move.py  test_direct_coverage_modules.py  test_transitive_engine.py
desloppify/tests/core/: test_hook_registry.py  test_narrative_actions.py  test_signal_patterns.py
desloppify/tests/detectors/: test_concerns.py  test_coverage_internals.py  test_test_coverage_heuristics.py  test_zones.py
desloppify/tests/plan/: test_auto_cluster.py
desloppify/tests/review/: shared_review_fixtures.py  test_holistic_review.py  test_review_context.py  test_review_context_selection.py  test_review_context_signals_direct.py  test_review_misc.py  test_review_submodules.py
desloppify/tests/scan/: test_scan_workflow_wontfix_direct.py
desloppify/tests/scoring/: test_scoring.py
docs/: CLAUDE.md  CODEX.md  COPILOT.md  CURSOR.md  DEVELOPMENT_PHILOSOPHY.md  GEMINI.md  OPENCODE.md  SKILL.md  WINDSURF.md  ci_plan.md
(+5 files in other folders)
